--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.6.2",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "flowbite": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
